kubernetes/celery-worker.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: celery-worker
  labels:
    app: celery-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: celery-worker
  template:
    metadata:
      labels:
        app: celery-worker
    spec:
      containers:
      - name: celery-worker
        image: app
        imagePullPolicy: Never
        command: ['celery', '-A', 'project', 'worker', '-l', 'info']
